--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="source\main\main.cpp">
       <Filter>source\main</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\ConsoleWindow.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="source\scene\SceneTitle.cpp">
+      <Filter>source\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -34,6 +40,15 @@
     </ClInclude>
     <ClInclude Include="source\main\main.h">
       <Filter>source\main</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\ConsoleWindow.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\scene\SceneBase.h">
+      <Filter>source\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="source\scene\SceneTitle.h">
+      <Filter>source\scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
