--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -43,7 +43,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <GenerateManifest>false</GenerateManifest>
-    <IncludePath>C:\work\Sisters\source\scene;C:\work\Sisters\source\utility;$(IncludePath)</IncludePath>
+    <IncludePath>C:\work\Sisters\source\main;C:\work\Sisters\source\scene;C:\work\Sisters\source\utility;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -81,6 +81,8 @@
     <ClCompile Include="source\main\main.cpp" />
     <ClCompile Include="source\main\WinMain.cpp" />
     <ClCompile Include="source\scene\SceneTitle.cpp" />
+    <ClCompile Include="source\utility\BackDropScreen.cpp" />
+    <ClCompile Include="source\utility\BitmapData.cpp" />
     <ClCompile Include="source\utility\ConsoleWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -88,6 +90,8 @@
     <ClInclude Include="source\main\WinMain.h" />
     <ClInclude Include="source\scene\SceneBase.h" />
     <ClInclude Include="source\scene\SceneTitle.h" />
+    <ClInclude Include="source\utility\BackDropScreen.h" />
+    <ClInclude Include="source\utility\BitmapData.h" />
     <ClInclude Include="source\utility\ConsoleWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
