--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="source\scene\SceneTitle.cpp">
       <Filter>source\scene</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\BackDropScreen.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="source\utility\BitmapData.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -49,6 +55,12 @@
     </ClInclude>
     <ClInclude Include="source\scene\SceneTitle.h">
       <Filter>source\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\BackDropScreen.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\BitmapData.h">
+      <Filter>source\utility</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
