--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="source\utility\BitmapData.cpp">
       <Filter>source\utility</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\Renderer.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="source\utility\KeyManager.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -60,6 +66,12 @@
       <Filter>source\utility</Filter>
     </ClInclude>
     <ClInclude Include="source\utility\BitmapData.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\Renderer.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\KeyManager.h">
       <Filter>source\utility</Filter>
     </ClInclude>
   </ItemGroup>
