--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -78,25 +78,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\main\Common.cpp" />
     <ClCompile Include="source\main\main.cpp" />
     <ClCompile Include="source\main\WinMain.cpp" />
-    <ClCompile Include="source\scene\SceneTitle.cpp" />
     <ClCompile Include="source\utility\BackDropScreen.cpp" />
     <ClCompile Include="source\utility\BitmapData.cpp" />
     <ClCompile Include="source\utility\ConsoleWindow.cpp" />
-    <ClCompile Include="source\utility\KeyManager.cpp" />
-    <ClCompile Include="source\utility\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\main\Common.h" />
     <ClInclude Include="source\main\main.h" />
     <ClInclude Include="source\main\WinMain.h" />
-    <ClInclude Include="source\scene\SceneBase.h" />
-    <ClInclude Include="source\scene\SceneTitle.h" />
     <ClInclude Include="source\utility\BackDropScreen.h" />
     <ClInclude Include="source\utility\BitmapData.h" />
     <ClInclude Include="source\utility\ConsoleWindow.h" />
-    <ClInclude Include="source\utility\KeyManager.h" />
-    <ClInclude Include="source\utility\Renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
