--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="source\utility\Renderer.cpp">
       <Filter>source\utility</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\BackGround.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -63,6 +66,9 @@
       <Filter>source\utility</Filter>
     </ClInclude>
     <ClInclude Include="source\utility\Renderer.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\BackGround.h">
       <Filter>source\utility</Filter>
     </ClInclude>
   </ItemGroup>
