--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="source\utility\BackGround.cpp">
       <Filter>source\utility</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\Sprite.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -69,6 +72,9 @@
       <Filter>source\utility</Filter>
     </ClInclude>
     <ClInclude Include="source\utility\BackGround.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\Sprite.h">
       <Filter>source\utility</Filter>
     </ClInclude>
   </ItemGroup>
