--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="source\utility\Chip.cpp">
       <Filter>source\utility</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\SceneManager.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
+    <ClCompile Include="source\scene\SceneBlank.cpp">
+      <Filter>source\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -82,6 +88,15 @@
     </ClInclude>
     <ClInclude Include="source\utility\Chip.h">
       <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\SceneManager.h">
+      <Filter>source\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="source\scene\SceneBlank.h">
+      <Filter>source\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="source\scene\SceneBase.h">
+      <Filter>source\scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
