sceneの追加とchipからのspriteの配置

--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="source\main\main.cpp" />
     <ClCompile Include="source\main\WinMain.cpp" />
     <ClCompile Include="source\scene\SceneBlank.cpp" />
+    <ClCompile Include="source\scene\SceneTitle.cpp" />
     <ClCompile Include="source\utility\BackGround.cpp" />
     <ClCompile Include="source\utility\Chip.cpp" />
     <ClCompile Include="source\utility\Renderer.cpp" />
@@ -99,6 +100,7 @@
     <ClInclude Include="source\main\WinMain.h" />
     <ClInclude Include="source\scene\SceneBase.h" />
     <ClInclude Include="source\scene\SceneBlank.h" />
+    <ClInclude Include="source\scene\SceneTitle.h" />
     <ClInclude Include="source\utility\BackGround.h" />
     <ClInclude Include="source\utility\Chip.h" />
     <ClInclude Include="source\utility\Renderer.h" />
