--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="source\characters\Player.cpp">
       <Filter>source\character</Filter>
     </ClCompile>
+    <ClCompile Include="source\utility\Collider.cpp">
+      <Filter>source\utility</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -118,6 +121,9 @@
     </ClInclude>
     <ClInclude Include="source\characters\Player.h">
       <Filter>source\character</Filter>
+    </ClInclude>
+    <ClInclude Include="source\utility\Collider.h">
+      <Filter>source\utility</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
