player のアニメーションの追加

--- a/Sisters.vcxproj
+++ b/Sisters.vcxproj
@@ -80,6 +80,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="source\characters\Animation.cpp" />
     <ClCompile Include="source\characters\Physics.cpp" />
     <ClCompile Include="source\characters\Player.cpp" />
     <ClCompile Include="source\main\Common.cpp" />
@@ -98,6 +99,7 @@
     <ClCompile Include="source\utility\Sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\characters\Animation.h" />
     <ClInclude Include="source\characters\Physics.h" />
     <ClInclude Include="source\characters\Player.h" />
     <ClInclude Include="source\main\Common.h" />
