--- a/Tools/mapEditor/script/MapEditor/MapEditor.vcxproj.filters
+++ b/Tools/mapEditor/script/MapEditor/MapEditor.vcxproj.filters
@@ -15,15 +15,6 @@
     <ClCompile Include="source\WndProc.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="source\Animation.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
-    <ClCompile Include="source\BackDropScreen.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
-    <ClCompile Include="source\BackGround.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
     <ClCompile Include="source\BitmapData.cpp">
       <Filter>source</Filter>
     </ClCompile>
@@ -42,18 +33,6 @@
     <ClCompile Include="source\KeyManager.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="source\Player.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
-    <ClCompile Include="source\SceneLoop.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
-    <ClCompile Include="source\SoundBGM.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
-    <ClCompile Include="source\SoundSE.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
     <ClCompile Include="source\Sprite.cpp">
       <Filter>source</Filter>
     </ClCompile>
@@ -63,17 +42,11 @@
     <ClCompile Include="source\CreateData.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="source\LoadMapData.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\Animation.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="source\BackDropScreen.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="source\BackGround.h">
-      <Filter>header</Filter>
-    </ClInclude>
     <ClInclude Include="source\BitmapData.h">
       <Filter>header</Filter>
     </ClInclude>
@@ -92,18 +65,6 @@
     <ClInclude Include="source\KeyManager.h">
       <Filter>header</Filter>
     </ClInclude>
-    <ClInclude Include="source\Player.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="source\SceneLoop.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="source\SoundBGM.h">
-      <Filter>header</Filter>
-    </ClInclude>
-    <ClInclude Include="source\SoundSE.h">
-      <Filter>header</Filter>
-    </ClInclude>
     <ClInclude Include="source\Sprite.h">
       <Filter>header</Filter>
     </ClInclude>
@@ -114,6 +75,9 @@
       <Filter>header</Filter>
     </ClInclude>
     <ClInclude Include="source\CreateData.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="source\LoadMapData.h">
       <Filter>header</Filter>
     </ClInclude>
   </ItemGroup>
