--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClCompile Include="source\characters\Gimmick.cpp">
       <Filter>source\character</Filter>
     </ClCompile>
+    <ClCompile Include="source\scene\SceneGame01.cpp">
+      <Filter>source\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="source\scene\SceneGame02.cpp">
+      <Filter>source\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
@@ -142,6 +148,12 @@
     </ClInclude>
     <ClInclude Include="source\characters\Gimmick.h">
       <Filter>source\character</Filter>
+    </ClInclude>
+    <ClInclude Include="source\scene\SceneGame01.h">
+      <Filter>source\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="source\scene\SceneGame02.h">
+      <Filter>source\scene</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
