--- a/Sisters.vcxproj.filters
+++ b/Sisters.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="source\gimmick\Shockers.cpp">
       <Filter>source\gimmick</Filter>
     </ClCompile>
+    <ClCompile Include="source\gimmick\Shooter.cpp">
+      <Filter>source\gimmick</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\main\WinMain.h">
